# FindMathematica

./: .gitignore  CMakeLists.txt  HISTORY.md  LICENSE  MANUAL.md  README.md
CMake/Mathematica/: FindMathematica.cmake  FindMathematicaDocumentationBuild.cmake.in  FindMathematicaTestDriver.cmd  FindMathematicaTestDriver.sh
CodeGenerationExamples/: CMakeLists.txt  compute.m  compute_main.c  control.m  functions.c  functions.m
DocumentationExamples/: CMakeLists.txt
DocumentationExamples/English/Guides/: GuidePage.nb
DocumentationExamples/English/ReferencePages/Symbols/: SymbolPage.nb
DocumentationExamples/English/Tutorials/: TutorialPage.nb
JLinkExamples/: .gitignore  AddTwo.java  CMakeLists.txt  FormatArray.java  FormatArrayTest.m
LibraryLinkExamples/: CMakeLists.txt  demo_callback.m  demo_managed_test.m  demo_numericarray_test.m  demo_shared.m  demo_sparse.m  demo_string_test.m  demo_test.m
MUnitExamples/: CMakeLists.txt  UnitsTests.mt  inputtest.mt  test.mt  test.nb  testsuite.mt
MathLinkExamples/: .gitignore  CMakeLists.txt  bitopsTest.m
MathematicaExamples/: CMakeLists.txt  demo.m  directories.m  spliceDemo.mc
WSTPExamples/: .gitignore  CMakeLists.txt  bitopsTest.m
